Switched to pynput

--- a/notebooks/Heatmap.ipynb
+++ b/notebooks/Heatmap.ipynb
@@ -63,35 +63,47 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>a</th>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>shift</th>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>D</th>\n",
-       "      <td>10</td>\n",
+       "      <td>11</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>y</th>\n",
-       "      <td>9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Shift_L</th>\n",
-       "      <td>8</td>\n",
+       "      <td>11</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>g</th>\n",
-       "      <td>8</td>\n",
+       "      <td>11</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>m</th>\n",
-       "      <td>8</td>\n",
+       "      <td>11</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>a</th>\n",
-       "      <td>7</td>\n",
+       "      <th>d</th>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Control_L</th>\n",
-       "      <td>1</td>\n",
+       "      <th>ctrl</th>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>c</th>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>e</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>w</th>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -99,16 +111,19 @@
        "</div>"
       ],
       "text/plain": [
-       "           count\n",
-       "key             \n",
-       "D             10\n",
-       "y              9\n",
-       "Shift_L        8\n",
-       "g              8\n",
-       "m              8\n",
-       "a              7\n",
-       "Control_L      1\n",
-       "c              1"
+       "       count\n",
+       "key         \n",
+       "a         12\n",
+       "shift     11\n",
+       "D         11\n",
+       "y         11\n",
+       "g         11\n",
+       "m         11\n",
+       "d          3\n",
+       "ctrl       2\n",
+       "c          2\n",
+       "e          1\n",
+       "w          1"
       ]
      },
      "execution_count": 3,
@@ -161,52 +176,66 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>D</th>\n",
-       "      <th>Shift_L</th>\n",
-       "      <td>8.0</td>\n",
+       "      <th>shift</th>\n",
+       "      <td>11.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>y</th>\n",
        "      <th>D</th>\n",
-       "      <td>8.0</td>\n",
+       "      <td>11.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>g</th>\n",
        "      <th>y</th>\n",
-       "      <td>8.0</td>\n",
+       "      <td>11.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>m</th>\n",
        "      <th>g</th>\n",
-       "      <td>8.0</td>\n",
+       "      <td>11.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>a</th>\n",
        "      <th>m</th>\n",
-       "      <td>7.0</td>\n",
+       "      <td>11.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Shift_L</th>\n",
+       "      <th>shift</th>\n",
        "      <th>a</th>\n",
-       "      <td>7.0</td>\n",
+       "      <td>9.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>D</th>\n",
-       "      <th>D</th>\n",
+       "      <th>ctrl</th>\n",
+       "      <th>a</th>\n",
        "      <td>2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>y</th>\n",
-       "      <th>y</th>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Control_L</th>\n",
-       "      <th>m</th>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>c</th>\n",
-       "      <th>Control_L</th>\n",
+       "      <th>ctrl</th>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">d</th>\n",
+       "      <th>d</th>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>a</th>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>e</th>\n",
+       "      <th>d</th>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>w</th>\n",
+       "      <th>e</th>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>shift</th>\n",
+       "      <th>w</th>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -219,19 +248,22 @@
        "</div>"
       ],
       "text/plain": [
-       "                     count\n",
-       "key       previous        \n",
-       "D         Shift_L      8.0\n",
-       "y         D            8.0\n",
-       "g         y            8.0\n",
-       "m         g            8.0\n",
-       "a         m            7.0\n",
-       "Shift_L   a            7.0\n",
-       "D         D            2.0\n",
-       "y         y            1.0\n",
-       "Control_L m            1.0\n",
-       "c         Control_L    1.0\n",
-       "a         b            0.0"
+       "                count\n",
+       "key   previous       \n",
+       "D     shift      11.0\n",
+       "y     D          11.0\n",
+       "g     y          11.0\n",
+       "m     g          11.0\n",
+       "a     m          11.0\n",
+       "shift a           9.0\n",
+       "ctrl  a           2.0\n",
+       "c     ctrl        2.0\n",
+       "d     d           2.0\n",
+       "      a           1.0\n",
+       "e     d           1.0\n",
+       "w     e           1.0\n",
+       "shift w           1.0\n",
+       "a     b           0.0"
       ]
      },
      "execution_count": 4,
@@ -242,6 +274,14 @@
    "source": [
     "distances.sort_values([\"count\"],ascending=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "87465ff1-e418-4aea-b975-9036862e6fc7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
